; ModuleID = '/home/carl/AnghaBench/systemd/src/udev/extr_udev-node.c_xsprintf_dev_num_path_from_sd_device.c'
source_filename = "/home/carl/AnghaBench/systemd/src/udev/extr_udev-node.c_xsprintf_dev_num_path_from_sd_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEV_NUM_PATH_MAX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"block\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"char\00", align 1
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8**)* @xsprintf_dev_num_path_from_sd_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xsprintf_dev_num_path_from_sd_device(i32* %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  %13 = load i32, i32* @DEV_NUM_PATH_MAX, align 4
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %6, align 8
  %16 = alloca i8, i64 %14, align 16
  store i64 %14, i64* %7, align 8
  %17 = load i8**, i8*** %5, align 8
  %18 = call i32 @assert(i8** %17)
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @sd_device_get_subsystem(i32* %19, i8** %9)
  store i32 %20, i32* %11, align 4
  %21 = load i32, i32* %11, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %2
  %24 = load i32, i32* %11, align 4
  store i32 %24, i32* %3, align 4
  store i32 1, i32* %12, align 4
  br label %49

25:                                               ; preds = %2
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @sd_device_get_devnum(i32* %26, i32* %10)
  store i32 %27, i32* %11, align 4
  %28 = load i32, i32* %11, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %25
  %31 = load i32, i32* %11, align 4
  store i32 %31, i32* %3, align 4
  store i32 1, i32* %12, align 4
  br label %49

32:                                               ; preds = %25
  %33 = load i8*, i8** %9, align 8
  %34 = call i64 @streq(i8* %33, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %35 = icmp ne i64 %34, 0
  %36 = zext i1 %35 to i64
  %37 = select i1 %35, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0)
  %38 = load i32, i32* %10, align 4
  %39 = call i32 @xsprintf_dev_num_path(i8* %16, i8* %37, i32 %38)
  %40 = call i8* @strdup(i8* %16)
  store i8* %40, i8** %8, align 8
  %41 = load i8*, i8** %8, align 8
  %42 = icmp ne i8* %41, null
  br i1 %42, label %46, label %43

43:                                               ; preds = %32
  %44 = load i32, i32* @ENOMEM, align 4
  %45 = sub nsw i32 0, %44
  store i32 %45, i32* %3, align 4
  store i32 1, i32* %12, align 4
  br label %49

46:                                               ; preds = %32
  %47 = load i8*, i8** %8, align 8
  %48 = load i8**, i8*** %5, align 8
  store i8* %47, i8** %48, align 8
  store i32 0, i32* %3, align 4
  store i32 1, i32* %12, align 4
  br label %49

49:                                               ; preds = %46, %43, %30, %23
  %50 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %50)
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @assert(i8**) #2

declare dso_local i32 @sd_device_get_subsystem(i32*, i8**) #2

declare dso_local i32 @sd_device_get_devnum(i32*, i32*) #2

declare dso_local i32 @xsprintf_dev_num_path(i8*, i8*, i32) #2

declare dso_local i64 @streq(i8*, i8*) #2

declare dso_local i8* @strdup(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
